# oddsports

./: .env.example  .gitignore  Cargo.toml  PRD.md  README.md  package.json  tsconfig.base.json
crates/oddsports-bot/: Cargo.toml
crates/oddsports-bot/src/: beehiiv.rs  main.rs  ratelimit.rs
crates/oddsports-pipeline/: Cargo.toml
crates/oddsports-pipeline/examples/: prose_smoke.rs
crates/oddsports-pipeline/src/: budget.rs  grading.rs  ingest.rs  lib.rs  main.rs  model.rs  prose.rs  scores.rs  store.rs
crates/oddsports-shared/: Cargo.toml
crates/oddsports-shared/src/: compliance.rs  lib.rs  links.rs  tiers.rs  types.rs
docs/: ACQUISITION_CHECKLIST.md  FABLE_HANDOFF.md  SPORTS_ORACLE.md
scripts/: ensure-bot.cmd  run-daily.cmd
