[workspace]
resolver = "2"
members = [
    "crates/oddsports-shared",
    "crates/oddsports-pipeline",
    "crates/oddsports-bot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["estejosh"]
license = "PolyForm-Noncommercial-1.0.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
