[package]
name = "oddsports-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
oddsports-shared = { path = "../oddsports-shared" }
oddsports-pipeline = { path = "../oddsports-pipeline" }
teloxide = { version = "0.13", features = ["macros"] }
dotenvy = "0.15"
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand = "0.8"
